--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,12 @@ magnum
 huggingface_hub
 keras
 python-multipart
+torch
+transformers
+accelerate
+tqdm
+soundfile
+audiocraft
+pydantic
+typing
+uuid
